<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".preview.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="#000000"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Setting"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/http_canary_permission_btn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/http_canary_setting_shape"
            android:text="@string/http_canary_setting_permission" />

<!--        <Button-->
<!--            android:id="@+id/http_canary_generate_btn"-->
<!--            android:layout_width="260dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="26dp"-->
<!--            android:background="@drawable/http_canary_setting_shape"-->
<!--            android:enabled="false"-->
<!--            android:text="@string/http_canary_setting_generate" />-->

        <Button
            android:id="@+id/http_canary_download_btn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/http_canary_setting_shape"
            android:enabled="false"
            android:text="@string/http_canary_setting_download" />

        <Button
            android:id="@+id/http_canary_global_btn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/http_canary_setting_shape"
            android:text="@string/http_canary_setting_global" />

        <Button
            android:id="@+id/http_canary_su_btn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/http_canary_setting_shape"
            android:enabled="true"
            android:text="@string/http_canary_setting_su" />

        <Button
            android:id="@+id/http_canary_etc_btn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/http_canary_setting_shape"
            android:enabled="false"
            android:text="@string/http_canary_setting_etc" />

        <Button
            android:id="@+id/http_canary_go_btn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:enabled="false"
            android:background="@drawable/http_canary_setting_shape"
            android:text="@string/http_canary_setting_go" />

    </LinearLayout>
</LinearLayout>